Administrador y Boton Like or Dislike
Seccion del Administrador - En proceso
Like or Dislike - En proceso

--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -1,13 +1,17 @@
-﻿@model List<Entidades.Necesidades>
+﻿@model Entidades.Views.VMPublicacion
 
-@if(Model.Count == 0)
+@{ 
+    int idSession = 91; //toDo: Usar session real
+}
+
+@if(Model.listaNecesidades.Count == 0)
 {
     <h1 id="margin-top-header" class="text-center"> No hay necesidades cargadas</h1>
 }
 else
 {
 
-foreach (var necesidad in Model)
+foreach (var necesidad in Model.listaNecesidades)
 {
     <div class="container" id="margin-top-header">
         <div class="card" id="card">
@@ -47,11 +51,29 @@ foreach (var necesidad in Model)
            
             <img class="card-img-top" src="~/Content/Img/@necesidad.Foto" id="imagen-necesidad" alt="Card image cap">
             <div class="card-body">
-                <div class="float-auto">
-                    <button type="button" class="btn btn-outline-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                @using (Html.BeginForm("LikeOrDislike", "Usuario", FormMethod.Post, new { @class = "float-auto" }))
+                {
+
+                    <input type="hidden" name="idNecesidad" value="@necesidad.IdNecesidad" />
+
+
+                    foreach (var item in Model.necesidadesValoraciones)
+                    {
+                        if (item.IdUsuario == idSession & item.IdNecesidad == necesidad.IdNecesidad & item.Valoracion == "Like")
+                        {
+                            <button type="submit" class="btn btn-success" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                        }
+                        else if (item.IdUsuario == idSession & item.IdNecesidad == necesidad.IdNecesidad & item.Valoracion == null)
+                        {
+                            <button type="submit" class="btn btn-outline-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                        }
+                    }
+
                     <label> <b class="text-primary">@necesidad.Valoracion%</b> de coincidencias </label>
 
-                    <button type="button" class="btn btn-outline-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
+
+
+                    <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                     <label> No estoy de acuerdo </label>
                     <div class="float-right">
                         @if (necesidad.TipoDonacion == 1)
@@ -64,7 +86,7 @@ foreach (var necesidad in Model)
                         }
 
                     </div>
-                </div>
+                }
 
 
                 <h2 class="card-title text-center">@necesidad.Nombre</h2>
