--- a/WebCovid19/Views/Usuario/IndexLogueado.cshtml
+++ b/WebCovid19/Views/Usuario/IndexLogueado.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Entidades.Necesidades>
+﻿@model Entidades.Views.VMPublicacion
 @{
     ViewBag.Title = "IndexLogueado";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
