--- a/WebCovid19/Views/Usuario/Perfil.cshtml
+++ b/WebCovid19/Views/Usuario/Perfil.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entidades.Usuarios
+﻿@model Entidades.Views.VMPerfil
 
 @{
     ViewBag.Title = "Perfil";
@@ -47,30 +47,23 @@
                         }
                         else
                         {
-                            <img class="rounded-circle border border-white mx-auto d-block  ml-5 mt-5 mb-2" id="imgperfil" src="@Model.Foto" />
+                            <img class="rounded-circle border border-white mx-auto d-block  ml-5 mt-5 mb-2" id="imgperfil" src="~/Content/Img/@Model.Foto" />
                         }
 
 
                         <div class="col-md-12">
                             <div class="card-body">
-                                @if (Model.UserName != null)
+                                @if (Model.Username != null)
                                 {
-                                    <h3 class="text-center">@Model.UserName</h3>
+                                    <h3 class="text-center">@Model.Username</h3>
                                 }
 
 
                                 <div class="input-group mb-3">
                                     <div class="form-group">
-                                        @if (Model.Foto != null)
-                                        {
-                                            @Html.ActionLink("Cambiar foto", "IndexLogueado", "Usuario", null, new { @class = "btn btn-danger" })
-                                        }
-                                        else
-                                        {
+                                       
                                             @Html.TextBoxFor(model => model.Foto, new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" })
-                                        }
-
-                                    </div>
+                                     </div>
                                 </div>
                             </div>
                         </div>
@@ -97,9 +90,9 @@
                                     else
                                     {
                                         @Html.EditorFor(o => o.Nombre, new { htmlAttributes = new { @class = "form-control disabled", @disabled = "disabled", value = Model.Nombre } })
+                                        <input type="hidden" name="Nombre" value="@Model.Nombre" />
                                     }
 
-                                    @*Para Disabled @Html.EditorFor(o => o.Nombre, new { htmlAttributes = new { @class = "form-control disabled", @disabled="disabled", placeholder="Nombre" } }) *@
                                     <br /> @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
                                 </div>
 
@@ -114,6 +107,7 @@
                                     else
                                     {
                                         @Html.EditorFor(o => o.Apellido, new { htmlAttributes = new { @class = "form-control disabled", @disabled = "disabled", value = Model.Apellido } })
+                                         <input type="hidden" name="Apellido" value="@Model.Apellido" />
                                     }
 
                                     <br /> @Html.ValidationMessageFor(model => model.Apellido, "", new { @class = "text-danger" })
@@ -124,6 +118,7 @@
                                         <span class="input-group-text" id="inputGroup-sizing-default">Email</span>
                                     </div>
                                     @Html.EditorFor(o => o.Email, new { htmlAttributes = new { @class = "form-control disabled", @disabled = "disabled", placeholder = "Email_Logueado@hotmail.com" } })
+                                    <input type="hidden" name="Email" value="@Model.Email" />
                                 </div>
 
 
