--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -46,7 +46,7 @@ foreach (var necesidad in Model.listaNecesidades)
 
                     <div class="col-md-2">
                         <p class=" text-secondary mt-3"><b>@necesidad.Usuarios.UserName</b></p>
-                        <p><span class="fa fa-calendar"></span> @necesidad.Usuarios.FechaCracion</p>
+                        <p><span class="fa fa-calendar"></span> @necesidad.Usuarios.FechaCreacion</p>
                     </div>
                 </div>
 
