Correccion vista Publicacion de la Necesidad
Saco id por default y uso el id de la session.

--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Entidades.Views.VMPublicacion
 
 @{ 
-    int idSession = 3;
+     int idSession = int.Parse(Session["UserId"].ToString()); ;
 }
 
 
