--- a/WebCovid19/Views/Shared/_BaseLayout.cshtml
+++ b/WebCovid19/Views/Shared/_BaseLayout.cshtml
@@ -12,6 +12,7 @@
     @System.Web.Optimization.Styles.Render("~/bundles/css/boostrap")<!--Bundles-->
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    @System.Web.Optimization.Styles.Render("~/bundles/fonts/Font-Awesome-min")<!--Bundles-->
     @System.Web.Optimization.Styles.Render("~/bundles/css/Linearicons")<!--Bundles-->
     @System.Web.Optimization.Styles.Render("~/bundles/css/font-awesome")<!--Bundles-->
     <!--Js-->
