--- a/WebCovid19/Views/Usuario/Perfil.cshtml
+++ b/WebCovid19/Views/Usuario/Perfil.cshtml
@@ -11,7 +11,7 @@
 
 
 
-@using (Html.BeginForm("ActualizarPerfil", "Usuario", FormMethod.Post))
+@using (Html.BeginForm("Perfil", "Usuario", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
