Cambio de Nombre
Modifico IndexLogueado por Home

--- a/WebCovid19/Views/Usuario/Home.cshtml
+++ b/WebCovid19/Views/Usuario/Home.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Entidades.Views.VMPublicacion
 @{
-    ViewBag.Title = "IndexLogueado";
+    ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
