--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-item active my-sm-2">
                         <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-                        @Html.ActionLink("Home", "IndexLogueado", "Usuario", null, new { @class = "nav-link hover text-light" })
+                        @Html.ActionLink("Home", "Home", "Usuario", null, new { @class = "nav-link hover text-light" })
 
                     </li>
                     <li class="nav-item active my-sm-2">
