--- a/WebCovid19/Views/Usuario/Administrador.cshtml
+++ b/WebCovid19/Views/Usuario/Administrador.cshtml
@@ -11,41 +11,39 @@
 </div>
 
 
-<div class="col-md-12">
-    <div class="col-md-4 mt-4 mb-3 float-left">
+
+<div class="col-md-12 ">
 
 
-@if (Model.Count == 0)
-{
-    <h1 class="text-center">No se preocupe, todavia no hay denuncias para gestionar.</h1>
-}
-else
-{
-
-    if (mensajeCorrecto != null)
+    @if (Model.Count == 0)
     {
-        <div class="p-3 mb-2 bg-success text-white">@mensajeCorrecto</div>
+        <div>
+            <h1 class="text-center">No se preocupe, todavia no hay denuncias para gestionar.</h1>
+        </div>
     }
-    if (mensajeError != null)
+    else
     {
-        <div class="p-3 mb-2 bg-danger text-white">@mensajeError</div>
-    }
-
-
-    foreach (var denuncia in Model.OrderByDescending(o => o.FechaCreacion))
-    {
-        using (Html.BeginForm("DenunciaEvaluada", "Usuario", FormMethod.Post, new { @class= "col-md-12" }))
+        if (mensajeCorrecto != null)
         {
+            <div class="p-3 mb-2 bg-success text-white">@mensajeCorrecto</div>
+        }
+        if (mensajeError != null)
+        {
+            <div class="p-3 mb-2 bg-danger text-white">@mensajeError</div>
+        }
 
-        <div class="col-md-4 mt-4 mb-3 float-left">
+        foreach (var denuncia in Model.OrderByDescending(o => o.FechaCreacion))
+        {
+            using (Html.BeginForm("DenunciaEvaluada", "Usuario", FormMethod.Post, new { @class = "col-md-12" }))
+            {
+
+                <div class="col-md-12 mt-4 mb-3 float-auto">
 
                     <div class="card" id="card">
-                        <img class="mx-auto d-block  ml-5 mt- mb-2" id="imgperfil-denuncia" src="~/Content/Img/@denuncia.Necesidades.Foto" />
-                    </div>
-                </div>
-
-                <div class="col-md-12 mt-3" id="margin-top-header">
-                    <div class="card" id="card">
+                        <img class="mx-auto d-block  ml-5 mt- mb-2" id="imagen-necesidad" src="~/Content/Img/@denuncia.Necesidades.Foto" />
+                   
+               
+                    
                         <div class="col-md-12">
 
                             <div class="card-body mt-2">
@@ -56,22 +54,20 @@ else
                                     <div class="col-md-6 text-center">
                                         <b>Usuario</b>
                                         <div class="col-md-12 text-center">
-                                            <p>@denuncia.Usuarios.UserName</p>
+                                            <p> @denuncia.Usuarios.UserName</p>
                                         </div>
                                     </div>
 
                                     <div class="col-md-6 text-center">
                                         <b>Descripcion</b>
                                         <div class="col-md-12 text-center">
-                                            <p> @denuncia.Necesidades.Descripcion</p>
+                                            <p>  @denuncia.Necesidades.Descripcion</p>
                                         </div>
                                     </div>
 
                                     <div class="col-md-6">
                                         <b>Motivo de denuncia:</b>
                                         <div class="col-md-12 text-center">
-
-
                                             @switch (@denuncia.IdMotivo)
                                             {
                                                 case 1:<h4 class="text-danger ">Fraude</h4>
@@ -83,7 +79,6 @@ else
                                                 case 4:<h4 class="text-danger ">Contiene información política</h4>
                                                     break;
                                             }
-
 
                                         </div>
                                     </div>
@@ -113,7 +108,6 @@ else
                                     </div>
                                 </div>
                             </div>
-
                             <input type="hidden" name="idNecesidad" value="@denuncia.Necesidades.IdNecesidad" />
                             <div class="col-md-12 btn-group mb-3">
                                 <button type="submit" name="Desestimar" class="btn btn-danger">Desestimar</button>
@@ -122,8 +116,7 @@ else
                         </div>
                     </div>
                 </div>
+            }
         }
-
     }
-
-}
+</div>
