--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Entidades.Views.VMPublicacion
 
 @{
-    int idSession = int.Parse(Session["UserId"].ToString()); ;
+    int idSession = int.Parse(Session["UserId"].ToString()); 
+}
 
 
 @if (Model.listaNecesidades.Count == 0)
