Modificadas las Views Insumos y Monetaria

--- a/WebCovid19/Views/Necesidades/Insumos.cshtml
+++ b/WebCovid19/Views/Necesidades/Insumos.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entidades.NecesidadesDonacionesInsumos
+﻿@model Entidades.Metadata.NecesidadesDonacionesInsumosMetadata
 
 @{
     ViewBag.Title = "Insumos";
