--- a/WebCovid19/Views/Necesidades/Monetaria.cshtml
+++ b/WebCovid19/Views/Necesidades/Monetaria.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebCovid19.NecesidadesDonacionesMonetarias
+﻿@model Entidades.Metadata.NecesidadesDonacionesMonetariasMetadata
 
 @{
     ViewBag.Title = "Monetaria";
