--- a/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/DonacionMonetaria.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Entidades.Views.VMDonacionMonetaria
 
 @{
-    ViewBag.Title = "DonacionMonetaria";
+    ViewBag.Title = "Donacion monetaria";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 <br>
