--- a/WebCovid19/Views/DonacionMonetaria/GraciasPorDonarMonetariamente.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/GraciasPorDonarMonetariamente.cshtml
@@ -1,10 +1,15 @@
 ﻿@{
-    ViewBag.Title = "GraciasPorDonarMonetariamente";
+    ViewBag.Title = "Gracias por donar";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
 <br />
 <br />
+<br />
+<br />
 
-<center><h2>Gracias por su donación monetaria</h2></center>
+<center>
+    <h1>Gracias por su donación monetaria</h1><br><br>
 
+    @Html.ActionLink("Volver al Home", "Home", "Usuario", null, new { @class = "btn btn-primary" })
+</center>
