--- a/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
+++ b/WebCovid19/Views/DonacionMonetaria/SeleccionComprobanteDePago.cshtml
@@ -1,7 +1,7 @@
-﻿@model Entidades.DonacionesMonetarias
+﻿@model Entidades.Views.VMComprobantePago
 
 @{
-    ViewBag.Title = "SeleccionComprobanteDePago";
+    ViewBag.Title = "Seleccion comprobante de pago";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
 }
 
@@ -12,27 +12,28 @@
 <div class="card" id="card">
 
     <div class="col-md-4 mt-3 mb-3 float-left">
+            @using (Html.BeginForm("SeleccionComprobanteDePago", "DonacionMonetaria", FormMethod.Post, new { enctype = "multipart/form-data" }))
 
-            @using (Html.BeginForm("SeleccionComprobanteDePago", "DonacionMonetaria", FormMethod.Post, new { @class = "login100-form validate-form p-b-33 p-t-5" }))
-            {
+            { 
                 @Html.AntiForgeryToken()
 
-                if (ViewBag.mensajeError2 != null) //Mensaje que esta en el controller.
-                {
-                    <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError2</div>
-                }
-
-                @*Valido que me suba un comprobante*@
-
-                <div class="form-group">
-                    @Html.ValidationMessageFor(model => model.ArchivoTransferencia, "", new { @class = "text-danger" })
-                    @Html.TextBoxFor(model => model.ArchivoTransferencia, new { type = "file" })
-                </div>
-
-                <div class="col-md-12 btn-group mt-4">
-                    <button type="submit" class="btn btn-primary ml-2">Confirmar</button>
-                </div>
+            if (ViewBag.mensajeError2 != null) //Mensaje que esta en el controller.
+            {
+                <div class="p-3 mb-2 bg-danger text-white">@ViewBag.mensajeError2</div>
             }
-       </div>
+
+            @*Valido que me suba un comprobante*@
+
+    <div class="form-group" name="ArchivoTransferencia">
+        @Html.TextBoxFor(model => model.ArchivoTransferencia, new { type = "file", accept = "image/jpg, image/jpeg, image/png", @class = "form-control-file" })
+        @Html.ValidationMessageFor(model => model.ArchivoTransferencia, "", new { @class = "text-danger" })
+
+    </div>
+
+            <div class="col-md-12 btn-group mt-4">
+                <button type="submit" class="btn btn-primary ml-2">Confirmar</button>
+            </div>
+        }
+    </div>
 </div>
 
