Agrego funcionalidad Detalle de la Necesidad
Agrego logica para que al dar Like te mantenga en la misma vista y no se vaya a otra.

--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -144,7 +144,9 @@ else
                     <div class="text-center">
                         @Html.ActionLink("Editar", "", "", null, new { @class = "btn btn-primary" })
 
-                        @Html.ActionLink("Más detalles", "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-info" })
+                        <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a> 
+                       
+                        
                         @if (necesidad.Usuarios.Nombre == null & necesidad.Usuarios.Apellido == null)
                         {
                             @Html.ActionLink("Ayudar", "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-primary" })
