Correcciones de Like or Dislike
Pongo la implementacion del metodo en una clase para que sea reutilizable en Home y en Detalle Necesidad

--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -104,7 +104,7 @@
                         {
                             <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                         }
-                        <label> Votar en contra </label>
+                        <label>Desacuerdo </label>
                     }
                 }
 
