Detalles en las vistas
Correcciones de diseño en DetalleNecesidad, en las vistas NecesidadesInsumos y en NecesidadesMonetarias

--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -35,7 +35,7 @@ else
                     </div>
 
                     <div class="row">
-                        @if (@necesidad.Usuarios.Foto == null)
+                        @if (necesidad.Usuarios.Foto == null)
                         {
                             <img class="rounded-circle float-left mt-2 border border-white" id="image-perfil" src="~/Content/Img/imagenPerfil-Nula.png">
                         }
