--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Entidades.Views.VMPublicacion
 
-@{ 
+@{
     ViewBag.Title = "NecesidadDonacionInsumos";
     int idSession = int.Parse(Session["UserId"].ToString());
 }
@@ -11,7 +11,7 @@
     <div class="col-md-12">
         <div class="float-right">
 
-            <p class="card-text text-secondary mt-5"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span>@Model.necesidadesDonacionesMonetarias.Necesidades.FechaFin</p>
+            <p class="card-text text-secondary mt-5"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span> @Model.necesidadesDonacionesMonetarias.Necesidades.FechaFin</p>
         </div>
 
 
@@ -23,11 +23,11 @@
             }
             else
             {
-                <img class="card-img-top" src="~/Content/Img/@Model.necesidadesDonacionesMonetarias.Necesidades.Usuarios.Foto" id="imagen-detalle" alt="Card image cap">
+                <img class="rounded-circle float-left mt-2 border border-white" id="image-perfil" src="~/Content/Img/@Model.necesidadesDonacionesMonetarias.Necesidades.Usuarios.Foto">
             }
-            <div class="col-md-2">
+            <div class="col-md-4">
                 <p class=" text-secondary mt-3"><b>@Model.necesidadesDonacionesMonetarias.Necesidades.Usuarios.UserName</b></p>
-                <p><span class="fa fa-calendar"></span>@Model.necesidadesDonacionesMonetarias.Necesidades.FechaCreacion</p>
+                <p><span class="fa fa-calendar"></span> @Model.necesidadesDonacionesMonetarias.Necesidades.FechaCreacion</p>
 
 
 
@@ -36,79 +36,79 @@
 
         <div class="col-md-12 ">
             <div class="col-md-5 mt-3 mb-3 float-left">
-                    <img class="card-img-top" src="~/Content/Img/@Model.necesidadesDonacionesMonetarias.Necesidades.Foto" id="imagen-detalle" alt="Card image cap">
-             
-            <div class="float-auto ml-4 mt-2">
+                <img class="card-img-top" src="~/Content/Img/@Model.necesidadesDonacionesMonetarias.Necesidades.Foto" id="imagen-detalle" alt="Card image cap">
 
-                @using (Html.BeginForm("DetalleNecesidad", "Necesidades", FormMethod.Post, new { @class = "float-auto ml-4" }))
-                {
-                    <input type="hidden" name="IdNecesidad" value="@Model.necesidadesDonacionesMonetarias.Necesidades.IdNecesidad" />
+                <div class="float-auto ml-4 mt-2">
 
-                    if (Model.necesidadesValoraciones.Count == 0)
+                    @using (Html.BeginForm("DetalleNecesidad", "Necesidades", FormMethod.Post, new { @class = "float-auto ml-4" }))
                     {
-                        <button type="submit" class="btn btn-outline-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-                    }
-                    else
-                    {
-                        int bandera = 0;
-                        foreach (var necesidadesValoraciones in Model.necesidadesValoraciones)     //3 ... 1... 2
-                        {
+                        <input type="hidden" name="IdNecesidad" value="@Model.necesidadesDonacionesMonetarias.Necesidades.IdNecesidad" />
 
-
-                            if (necesidadesValoraciones.IdUsuario == idSession & necesidadesValoraciones.IdNecesidad == @Model.necesidadesDonacionesMonetarias.Necesidades.IdNecesidad & necesidadesValoraciones.Valoracion == "Like")
-                            {
-                                <button type="submit" class="btn btn-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-
-                                break;
-                            }
-                            else
-                            {
-                                bandera++;
-                            }
-
-                        }
-
-
-                        if (Model.necesidadesValoraciones.Count == bandera)
+                        if (Model.necesidadesValoraciones.Count == 0)
                         {
                             <button type="submit" class="btn btn-outline-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                         }
-                    }
-                    <label> <b class="text-primary">@Model.necesidadesDonacionesMonetarias.Necesidades.Valoracion%</b> de coincidencias </label>
-
-
-
-                    if (Model.necesidadesValoraciones.Count == 0)
-                    {
-                        <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-                    }
-                    else
-                    {
-                        int bandera = 0;
-                        foreach (var necesidadesValoraciones in Model.necesidadesValoraciones)
+                        else
                         {
-                            if (necesidadesValoraciones.IdUsuario == idSession & necesidadesValoraciones.IdNecesidad == @Model.necesidadesDonacionesMonetarias.Necesidades.IdNecesidad & necesidadesValoraciones.Valoracion == "Dislike")
+                            int bandera = 0;
+                            foreach (var necesidadesValoraciones in Model.necesidadesValoraciones)     //3 ... 1... 2
                             {
-                                <button type="submit" class="btn btn-danger" name="Dislike"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
 
-                                break;
-                            }
-                            else
-                            {
-                                bandera++;
+
+                                if (necesidadesValoraciones.IdUsuario == idSession & necesidadesValoraciones.IdNecesidad == @Model.necesidadesDonacionesMonetarias.Necesidades.IdNecesidad & necesidadesValoraciones.Valoracion == "Like")
+                                {
+                                    <button type="submit" class="btn btn-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+
+                                    break;
+                                }
+                                else
+                                {
+                                    bandera++;
+                                }
 
                             }
-                        }
 
-                        if (Model.necesidadesValoraciones.Count == bandera)
+
+                            if (Model.necesidadesValoraciones.Count == bandera)
+                            {
+                                <button type="submit" class="btn btn-outline-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                            }
+                        }
+                        <label> <b class="text-primary">@Model.necesidadesDonacionesMonetarias.Necesidades.Valoracion%</b> de coincidencias </label>
+
+
+
+                        if (Model.necesidadesValoraciones.Count == 0)
                         {
-                            <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                            <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                         }
-                        <label>Desacuerdo </label>
-                    }
-                }
+                        else
+                        {
+                            int bandera = 0;
+                            foreach (var necesidadesValoraciones in Model.necesidadesValoraciones)
+                            {
+                                if (necesidadesValoraciones.IdUsuario == idSession & necesidadesValoraciones.IdNecesidad == @Model.necesidadesDonacionesMonetarias.Necesidades.IdNecesidad & necesidadesValoraciones.Valoracion == "Dislike")
+                                {
+                                    <button type="submit" class="btn btn-danger" name="Dislike"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
 
-            </div>
+                                    break;
+                                }
+                                else
+                                {
+                                    bandera++;
+
+                                }
+                            }
+
+                            if (Model.necesidadesValoraciones.Count == bandera)
+                            {
+                                <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
+                            }
+                            <label>Desacuerdo </label>
+                        }
+                    }
+
+                </div>
             </div>
 
 
@@ -124,20 +124,26 @@
                             <i>@Model.necesidadesDonacionesMonetarias.Necesidades.Descripcion</i>
                         </div>
 
-
-
                         <div class="col-md-12 mb-3 mt-3 text-center">
-
                             <h3><img src="img/dinero.png" id="icons" alt=""> Total restante: <b>$@Model.necesidadesDonacionesMonetarias.Dinero</b></h3>
-
                         </div>
+                    </div>
+                    @if (Model.necesidadesDonacionesMonetarias.Necesidades.IdUsuarioCreador == idSession)
+                    {
+                        <div class="col-md-12 btn-group mt-4 mb-3">
+                            @Html.ActionLink("Regresar a Home", "Home", "Usuario", "", new { @class = "btn btn-danger" })
+                            <button type="button" class="btn btn-info ml-2">Editar</button>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="col-md-12 btn-group mt-4 mb-3">
+                            @Html.ActionLink("En otro momento", "Home", "Usuario", "", new { @class = "btn btn-danger" })
+                            <button type="button" class="btn btn-success ml-2">Donar Dinero</button>
+                        </div>
+                    }
 
 
-                    </div>
-                    <div class="col-md-12 btn-group mt-4 mb-3">
-                        <button type="button" class="btn btn-danger">En otro momento</button>
-                        <button type="button" class="btn btn-success ml-2">Donar Dinero</button>
-                    </div>
                 </div>
 
             </div>
