--- a/WebCovid19/Views/Necesidades/Monetaria.cshtml
+++ b/WebCovid19/Views/Necesidades/Monetaria.cshtml
@@ -16,6 +16,14 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
+        @Html.LabelFor(model => model.IdNecesidad, "IdNecesidad", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("IdNecesidad", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.IdNecesidad, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.Dinero, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Dinero, new { htmlAttributes = new { @class = "form-control" } })
