--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -142,21 +142,31 @@ else
 
                     <p class="card-text text-secondary"><b>Fecha de finalización:</b> <span class="fa fa-calendar"></span> @necesidad.FechaFin</p>
                     <div class="text-center">
-                        @Html.ActionLink("Editar", "", "", null, new { @class = "btn btn-primary" })
-
-                        <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
-
-
-                        @if (necesidad.Usuarios.Nombre == null & necesidad.Usuarios.Apellido == null)
+                        @if (necesidad.IdUsuarioCreador == idSession)
                         {
-                            @Html.ActionLink("Ayudar", "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-primary" })
+                            @Html.ActionLink("Editar", "", "", null, new { @class = "btn btn-primary" })
 
+                            <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
                         }
                         else
                         {
-                            @Html.ActionLink("Ayudar a " + necesidad.Usuarios.Nombre + " " + necesidad.Usuarios.Apellido, "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-success" })
+                            <a href="~/Necesidades/DetalleNecesidad?idNecesidad=@necesidad.IdNecesidad" class="btn btn-info">Mas detalles</a>
 
+                            if (necesidad.Usuarios.Nombre == null & necesidad.Usuarios.Apellido == null)
+                            {
+                                @Html.ActionLink("Ayudar", "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-primary" })
+
+                            }
+                            else
+                            {
+                                @Html.ActionLink("Ayudar a " + necesidad.Usuarios.Nombre + " " + necesidad.Usuarios.Apellido, "NecesidadDonacionInsumos", "NecesidadDonacionInsumos", null, new { @class = "btn btn-success" })
+
+                            }
                         }
+
+
+
+
 
                     </div>
                 </div>
