--- a/WebCovid19/Views/Usuario/Index.cshtml
+++ b/WebCovid19/Views/Usuario/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model List<Entidades.Necesidades>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
@@ -28,118 +29,36 @@
 </div>
 
 
+
+
+
 <div class="container">
     <div class="row">
         <div class="col-sm-none col-md-1"></div><!--Trampa jajaja-->
-        <!--Necesidad 1-->
-        <div class="card col-sm-12 col-md-2">
-            <img class="card-img-top" src="~/Content/Img/1.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Nombre</h5>
-                <p class="card-text">Usuario Creador</p>
-                <p class="card-text">
-                    <div class="float-auto">
-                        <button type="button" class="btn btn-outline-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-                        <label> 6 </label>
 
-                        <button type="button" class="btn btn-outline-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-                        <label> 6 </label>
+
+        @foreach (var item in Model)
+        {
+            <!--Necesidad 1-->
+            <div class="card col-sm-12 col-md-2">
+                <img class="card-img-top" src="~/Content/Img/@item.Foto" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">@item.Nombre</h5>
+                    <p class="card-text">@item.Usuarios.UserName</p>
+                    <p class="card-text">
+                        <div class="float-auto">
+
+                            <label> <b class="text-primary">@item.Valoracion%</b> de coincidencias </label>
+                        </div>
+                    </p>
+                    <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05</p>
+                    <div class="text-center">
+                        <a href="@Url.Action("Detalles","Necesidades")" class="btn btn-primary">Mas detalles</a>
                     </div>
-                </p>
-                <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05</p>
-                <div class="text-center">
-                    <a href="@Url.Action("Detalles","Necesidades")" class="btn btn-primary">Mas detalles</a>
                 </div>
             </div>
-        </div>
-        <!--Fin necesidad 1-->
-        <!--Necesidad 2-->
-        <div class="card col-sm-12 col-md-2">
-            <img class="card-img-top" src="~/Content/Img/3.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Nombre 2</h5>
-                <p class="card-text">Usuario Creador</p>
-                <p class="card-text">
-                    <div class="float-auto">
-                        <button type="button" class="btn btn-outline-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-                        <label> 6 </label>
+            <!--Fin necesidad 1-->
+        }
 
-                        <button type="button" class="btn btn-outline-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-                    </div>
-                </p>
-                <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05 </p>
-                <div class="text-center">
-                    <a href="#" class="btn btn-primary">Mas detalles</a>
-                </div>
-            </div>
-        </div>
-        <!--Fin necesidad 2-->
-        <!--Necesidad 3-->
-        <div class="card col-sm-12 col-md-2">
-            <img class="card-img-top" src="~/Content/Img/4.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Nombre 3</h5>
-                <p class="card-text">Usuario Creador</p>
-                <p class="card-text">
-                    <div class="float-auto">
-                        <button type="button" class="btn btn-outline-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-
-                        <button type="button" class="btn btn-outline-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-                    </div>
-                </p>
-                <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05</p>
-                <div class="text-center">
-                    <a href="#" class="btn btn-primary">Mas detalles</a>
-                </div>
-            </div>
-        </div>
-        <!--Fin necesidad 3-->
-        <!--Necesidad 4-->
-        <div class="card col-sm-12 col-md-2">
-            <img class="card-img-top" src="~/Content/Img/1.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Nombre 4</h5>
-                <p class="card-text">Usuario Creador</p>
-                <p class="card-text">
-                    <div class="float-auto">
-                        <button type="button" class="btn btn-outline-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-
-                        <button type="button" class="btn btn-outline-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-                    </div>
-                </p>
-                <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05</p>
-                <div class="text-center">
-                    <a href="#" class="btn btn-primary">Mas detalles</a>
-                </div>
-            </div>
-        </div>
-        <!--Fin necesidad 4-->
-        <!--Necesidad 5-->
-        <div class="card col-sm-12 col-md-2">
-            <img class="card-img-top" src="~/Content/Img/inicio3.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Nombre 5</h5>
-                <p class="card-text">Usuario Creador</p>
-                <p class="card-text">
-                    <div class="float-auto">
-                        <button type="button" class="btn btn-outline-info"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-
-                        <button type="button" class="btn btn-outline-danger"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
-                        <label> 6 </label>
-                    </div>
-                </p>
-                <p class="card-text text-secondary"><span class="fa fa-calendar"></span> 2016-03-05</p>
-                <div class="text-center">
-                    <a href="#" class="btn btn-primary">Mas detalles</a>
-                </div>
-            </div>
-        </div>
-        <!--Fin necesidad 5-->
     </div>
 </div>
