Correcciones de logica

--- a/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionInsumos.cshtml
@@ -70,14 +70,14 @@
                     {
                         <input type="hidden" name="IdNecesidad" value="@Model.necesidadesDonacionesInsumos.Necesidades.IdNecesidad" />
 
-                        if (Model.necesidadesValoraciones.Count == 0)
+                        if (Model.necesidad.NecesidadesValoraciones.Count == 0)
                         {
                             <button type="submit" class="btn btn-outline-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                         }
                         else
                         {
                             int bandera = 0;
-                            foreach (var necesidadesValoraciones in Model.necesidadesValoraciones)     //3 ... 1... 2
+                            foreach (var necesidadesValoraciones in Model.necesidad.NecesidadesValoraciones)     //3 ... 1... 2
                             {
 
 
@@ -95,7 +95,7 @@
                             }
 
 
-                            if (Model.necesidadesValoraciones.Count == bandera)
+                            if (Model.necesidad.NecesidadesValoraciones.Count == bandera)
                             {
                                 <button type="submit" class="btn btn-outline-info" name="Like"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                             }
@@ -104,14 +104,14 @@
 
 
 
-                        if (Model.necesidadesValoraciones.Count == 0)
+                        if (Model.necesidad.NecesidadesValoraciones.Count == 0)
                         {
                             <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-down" aria-hidden="true"></i></button>
                         }
                         else
                         {
                             int bandera = 0;
-                            foreach (var necesidadesValoraciones in Model.necesidadesValoraciones)
+                            foreach (var necesidadesValoraciones in Model.necesidad.NecesidadesValoraciones)
                             {
                                 if (necesidadesValoraciones.IdUsuario == idSession & necesidadesValoraciones.IdNecesidad == @Model.necesidadesDonacionesInsumos.Necesidades.IdNecesidad & necesidadesValoraciones.Valoracion == "Dislike")
                                 {
@@ -126,7 +126,7 @@
                                 }
                             }
 
-                            if (Model.necesidadesValoraciones.Count == bandera)
+                            if (Model.necesidad.NecesidadesValoraciones.Count == bandera)
                             {
                                 <button type="submit" class="btn btn-outline-danger" name="Dislike"><i class="fa fa-thumbs-up" aria-hidden="true"></i></button>
                             }
