--- a/WebCovid19/Views/Usuario/Home.cshtml
+++ b/WebCovid19/Views/Usuario/Home.cshtml
@@ -1,4 +1,4 @@
-﻿@model Entidades.Views.VMPublicacion
+﻿@model List<Entidades.Necesidades>
 @{
     ViewBag.Title = "Home";
     Layout = "~/Views/Shared/_NecesidadesLayout.cshtml";
