--- a/WebCovid19/Views/Usuario/Index.cshtml
+++ b/WebCovid19/Views/Usuario/Index.cshtml
@@ -16,6 +16,17 @@
     <div class="p-3 mb-2 bg-warning text-white">@mensaje</div>
 }
 
+
+
+@if(Model.Count == 0)
+{
+    <h1> Aun no hay necesidades cargadas</h1>
+}
+else
+{
+    
+
+
 <div id="about" class=" area-padding my-sm-4">
     <div class="container">
         <div class="row">
@@ -62,3 +73,4 @@
 
     </div>
 </div>
+}
