--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -54,7 +54,7 @@
                         </li>
                         <li class="nav-item active my-sm-2">
                             <!-- <a class="nav-link hover text-light" href="#">Acerca de</a>-->
-                            @Html.ActionLink("Home", "Home", "Usuario", null, new { @class = "nav-link hover text-light" })
+                            @Html.ActionLink("Home", "Home", "Necesidades", null, new { @class = "nav-link hover text-light" })
 
                         </li>
                         <li class="nav-item active my-sm-2">
