--- a/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
+++ b/WebCovid19/Views/Shared/PublicacionDeLaNecesidad.cshtml
@@ -2,8 +2,8 @@
 
 @{
     int idSession = int.Parse(Session["UserId"].ToString());
+    var necesidadesDelUser = ViewBag.necesidadesDelUser;
 }
-
 
 @if (Model.Count == 0)
 {
@@ -65,7 +65,7 @@ else
                         else
                         {
                             int bandera = 0;
-                           
+
                             foreach (var item in necesidad.NecesidadesValoraciones)     //3 ... 1... 2
                             {
 
