Motrar resultados de la busqueda en Home

--- a/WebCovid19/Views/Shared/VPHeader.cshtml
+++ b/WebCovid19/Views/Shared/VPHeader.cshtml
@@ -34,7 +34,7 @@
 
 
             <div class="col-md-4">
-                @using (Html.BeginForm("Buscar", "Necesidades", FormMethod.Post, new { @class = "form-inline my-2 my-lg-0" }))
+                @using (Html.BeginForm("Home", "Necesidades", FormMethod.Post, new { @class = "form-inline my-2 my-lg-0" }))
                 {
 
 
