--- a/WebCovid19/Views/Necesidades/Insumos.cshtml
+++ b/WebCovid19/Views/Necesidades/Insumos.cshtml
@@ -34,7 +34,7 @@
     </div>
 
     <div class="btn-group">
-        <input type="submit" value="Crear" class="offset-md-6 btn btn-primary" />
+        <input type="submit" value="Insumos" class="offset-md-6 btn btn-primary" />
         <div class="col-2"></div>
         <input type="reset" value="Reiniciar" class="btn btn-primary" />
         <div class="col-2"></div>
