Validacion 5 denuncias diferentes
Si la necesidad alcanzara 5 denuncias diferentes(diferenciado por idUsuario) quedará en un estado de revisión por parte del
administrador y no se visualizará dentro de las búsquedas o home del sitio.

--- a/WebCovid19/Views/Usuario/Administrador.cshtml
+++ b/WebCovid19/Views/Usuario/Administrador.cshtml
@@ -109,6 +109,7 @@
                                 </div>
                             </div>
                             <input type="hidden" name="idNecesidad" value="@denuncia.Necesidades.IdNecesidad" />
+                            <input type="hidden" name="IdDenuncia" value="@denuncia.IdDenuncia" />
                             <div class="col-md-12 btn-group mb-3">
                                 <button type="submit" name="Desestimar" class="btn btn-danger">Desestimar</button>
                                 <button type="submit" name="Bloquear" class="btn btn-success ml-2">Bloquear</button>
