--- a/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
+++ b/WebCovid19/Views/Shared/NecesidadDonacionMonetaria.cshtml
@@ -139,7 +139,7 @@
                     {
                         <div class="col-md-12 btn-group mt-4 mb-3">
                             @Html.ActionLink("En otro momento", "Home", "Necesidades", "", new { @class = "btn btn-danger" })
-                            <button type="button" class="btn btn-success ml-2">Donar Dinero</button>
+                            <a href="~/DonacionMonetaria/DonaMonetaria?idNecesidadDonacionMonetaria=@Model.necesidadesDonacionesMonetarias.IdNecesidadDonacionMonetaria" class="btn btn-info ml-2">Donar Dinero</a>
                         </div>
                     }
 
